# backend_sample_sncf

./: main.py  pyproject.toml
features/axe_ef/: router.py  service.py
opticapa/: __main__.py
opticapa/features/axe_ef/: schemas.py
opticapa/features/probes_routes/: router.py
opticapa/shared/common/: api_helpers.py  base_model.py  enums.py
opticapa/shared/common/schemas/: common.py
opticapa/shared/common/service/crud/: crud_sync_service.py
opticapa/shared/config/: config.py
opticapa/shared/database/: decorators.py  manage_db.py
shared/common/service/: __init__.py
shared/common/service/crud/: __init__.py  crud_verify_existence.py
shared/utils/: exceptions.py
